# hibiscus-bot

./: .gitignore  LICENSE  __main__.py  agent_factory.py  agent_tools.py  app.py  embeddings.py  gen_info_agent.py  hh_about_agent.py  lambda-backup.py  main.py  prompts.py  pyproject.toml  readme.md  requirements.txt  response.py  supervisor_agent.py
about_hh_docs/: faq.txt  webpage_foremployers.txt  webpage_forindividuals.txt  webpage_home.txt  webpage_kiosk.txt
agents/: fitness_agent.py  general_agent.py  nutrition_agent.py  state.py  supervisor_agent.py
chroma_db/: chroma.sqlite3
data/hibiscus-corpus/cardiovascular-risk/: DASH Eating Plan_ An Eating Pattern for Diabetes Management - PMC.html  Dietary Guidelines for Americans, 2020–2025_ Understanding the Scientific Process, Guidelines, and Key Recommendations - PMC.html
data/hibiscus-corpus/diabetes/: Healthy Living with Diabetes - NIDDK.html  Nutrition Therapy for Adults With Diabetes or Prediabetes_ A Consensus Report _ Diabetes Care _ American Diabetes Association.html
data/hibiscus-corpus/food-allergies-intolerances/: Nutritional management of food allergies_ Prevention and treatment - PMC.html
data/sample_collection/: FollowingDASH.txt
data/sample_data/: HypertensionNutritionGuidelines.html
docs/MedConditionDieting/: hypertension.txt
fine-tuning/: training_llm.py
hibiscus_bot.egg-info/: PKG-INFO  SOURCES.txt
llm/: launch_llm.py  training_llm.py
public/: stylesheet.css
resources/: agent.py  craft_embeddings_old.py  not_sure.py
utils/: embeddings.py  prompts.py
~/: .zshrc
(+8 files in other folders)
